@@ -1,5 +1,8 @@
 Post-v3.0.0
 --------------------
+   - ovs-appctl:
+     * "ovs-appctl ofproto/trace" command can now display port names with the
+       "--names" option.
 
 
 v3.0.0 - 15 Aug 2022
